--- a/tips.html
+++ b/tips.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tips and Tricks</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div id="navbar-container"></div>
 
     <style>
-
         body {
             margin: 0;
             background-color: rgb(243, 249, 210);
@@ -35,13 +38,13 @@
             margin-top: 10px;
         }
 
-        nav {
+        .tipsNav {
             display: flex;
             justify-content: center;
             padding: 20px
         }
 
-        nav ul {
+        .tipsNav ul {
             list-style: none;
             padding: 0;
             margin: 0;
@@ -51,7 +54,7 @@
             align-items: center;
         }
 
-        nav ul li a {
+        .tipsNav ul li a {
             text-decoration: none;
             color: #333;
             font-size: 22px;
@@ -61,7 +64,7 @@
             border-radius: 8px;
         }
 
-        nav ul li a:hover {
+        .tipsNav ul li a:hover {
             border-color: orchid;
             background-color: rgba(249, 100, 209, 0.1);
         }
@@ -101,14 +104,13 @@
         }
 
     </style>
-</head>
-<body>
+
     <header>
         <h1>Gardening Tips</h1>
         <p>Simple tips to help you get the most out of your garden, indoors or out!</p>
     </header>
 
-    <nav>
+    <nav class="tipsNav">
         <ul>
             <li><a href="#garden-setup">Not sure how to get started? 🧤</a></li>
             <li><a href="#compost">Want composting tips? 🍂</a></li>
@@ -174,5 +176,6 @@
             </dd>
         </dl>
     </section>
+    <script src="/Scripts/loadNavbar.js"></script>
 </body>
 </html>
