fixed restructuring errors

--- a/Activities/careCards.html
+++ b/Activities/careCards.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title>Care Cards</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="/style.css" />
     </head>
 
     <body>
@@ -16,7 +16,7 @@
             <div class="flashcard" onclick="flipCard(this)" id="Thyme">
                 <div class="flashcard-inner">
                     <div class="flashcard-front">
-                        <img src="Images/Thyme.jpg"/>
+                        <img src="/Images/Thyme.jpg"/>
                     </div>
                     <div class="flashcard-back">
                         Thyme
@@ -26,7 +26,7 @@
             <div class="flashcard" onclick="flipCard(this)" id="Rosemary">
                 <div class="flashcard-inner">
                     <div class="flashcard-front">
-                        <img src="Images/Rosemary.jpg"/>
+                        <img src="/Images/Rosemary.jpg"/>
                     </div>
                     <div class="flashcard-back">
                         Rosemary
@@ -37,7 +37,7 @@
             <div class="flashcard" onclick="flipCard(this)" id="Herb">
                 <div class="flashcard-inner">
                     <div class="flashcard-front">
-                        <img src="Images/Oregano.jpg"/>
+                        <img src="/Images/Oregano.jpg"/>
                     </div>
                     <div class="flashcard-back">
                         Oregano
@@ -47,7 +47,7 @@
             <div class="flashcard" onclick="flipCard(this)" id="Herb">
                 <div class="flashcard-inner">
                     <div class="flashcard-front">
-                        <img src="Images/Basil.jpg"/>
+                        <img src="/Images/Basil.jpg"/>
                     </div>
                     <div class="flashcard-back">
                         Basil
@@ -57,7 +57,7 @@
             <div class="flashcard" onclick="flipCard(this)" id="Herb">
                 <div class="flashcard-inner">
                     <div class="flashcard-front">
-                        <img src="Images/Mint.jpg"/>
+                        <img src="/Images/Mint.jpg"/>
                     </div>
                     <div class="flashcard-back">
                         Mint
@@ -67,7 +67,7 @@
             <div class="flashcard" onclick="flipCard(this)" id="Herb">
                 <div class="flashcard-inner">
                     <div class="flashcard-front">
-                        <img src="Images/Parsley.jpg"/>
+                        <img src="/Images/Parsley.jpg"/>
                     </div>
                     <div class="flashcard-back">
                         Parsley
@@ -81,7 +81,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Flower">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Milkweed.jpg"/>
+                    <img src="/Images/Milkweed.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Milkweed
@@ -91,7 +91,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Flower">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Lavender.jpg"/>
+                    <img src="/Images/Lavender.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Lavender
@@ -101,7 +101,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Flower">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/SweetPea.jpg"/>
+                    <img src="/Images/SweetPea.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Sweet Pea
@@ -111,7 +111,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Flower">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Allium.jpg"/>
+                    <img src="/Images/Allium.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Allium
@@ -121,7 +121,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Flower">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/BlueBonnet.jpg"/>
+                    <img src="/Images/BlueBonnet.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Blue Bonnet
@@ -131,7 +131,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Flower">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Carnation.jpg"/>
+                    <img src="/Images/Carnation.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Carnation
@@ -141,7 +141,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Flower">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/BleedingHeart.jpg"/>
+                    <img src="/Images/BleedingHeart.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Bleeding Heart
@@ -151,7 +151,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Flower">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Hydrangea.jpg"/>
+                    <img src="/Images/Hydrangea.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Hydrangea
@@ -161,7 +161,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Flower">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Daylily.jpg"/>
+                    <img src="/Images/Daylily.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Daylily
@@ -171,7 +171,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Flower">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/BlackEyedSusan.jpg"/>
+                    <img src="/Images/BlackEyedSusan.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Black-Eyed Susan
@@ -184,7 +184,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Fruit">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Tomato.jpg"/>
+                    <img src="/Images/Tomato.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Tomato
@@ -194,7 +194,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Fruit">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Strawberry.jpg"/>
+                    <img src="/Images/Strawberry.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Strawberry
@@ -204,7 +204,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Fruit">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Blueberry.jpg"/>
+                    <img src="/Images/Blueberry.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Blueberry
@@ -214,7 +214,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Fruit">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Blackberry.jpg"/>
+                    <img src="/Images/Blackberry.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Blackberry
@@ -224,7 +224,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Fruit">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Lemon.jpg"/>
+                    <img src="/Images/Lemon.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Lemon
@@ -237,7 +237,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Veggie">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Pea.jpg"/>
+                    <img src="/Images/Pea.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Pea
@@ -247,7 +247,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Veggie">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Zucchini.jpg"/>
+                    <img src="/Images/Zucchini.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Zucchini
@@ -257,7 +257,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Veggie">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Squash.jpg"/>
+                    <img src="/Images/Squash.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Squash
@@ -267,7 +267,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Veggie">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/BellPepper.jpg"/>
+                    <img src="/Images/BellPepper.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Bell Pepper
@@ -277,7 +277,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Veggie">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Garlic.jpg"/>
+                    <img src="/Images/Garlic.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Garlic
@@ -287,7 +287,7 @@
         <div class="flashcard" onclick="flipCard(this)" id="Veggie">
             <div class="flashcard-inner">
                 <div class="flashcard-front">
-                    <img src="Images/Lettuce.jpg"/>
+                    <img src="/Images/Lettuce.jpg"/>
                 </div>
                 <div class="flashcard-back">
                     Lettuce
