Completed Activites dropdown navbar.

--- a/Activities/matchingGame.html
+++ b/Activities/matchingGame.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Match Images to Names Game</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div id="navbar-container"></div>
@@ -103,33 +103,33 @@
     <script>
         // Define the set of images and names
         const images = [
-            { src: 'Images/Allium.jpg', name: 'Allium' },
-            { src: 'Images/Basil.jpg', name: 'Basil' },
-            { src: 'Images/BellPepper.jpg', name: 'Bell Pepper' },
-            { src: 'Images/Blackberry.jpg', name: 'Blackberry' },
-            { src: 'Images/BlackEyedSusan.jpg', name: 'Black-Eyed Susan'},
-            { src: 'Images/BleedingHeart.jpg', name: 'Bleeding Heart'},
-            { src: 'Images/Blueberry.jpg', name: 'Blueberry'},
-            { src: 'Images/BlueBonnet.jpg', name: 'Blue Bonnet'},
-            { src: 'Images/Carnation.jpg', name: 'Carnation'},
-            { src: 'Images/Daylily.jpg', name: 'Daylily'},
-            { src: 'Images/Garlic.jpg', name: 'Garlic'},
-            { src: 'Images/Hydrangea.jpg', name: 'Hydrangea'},
-            { src: 'Images/Lavender.jpg', name: 'Lavender'},
-            { src: 'Images/Lemon.jpg', name: 'Lemon'},
-            { src: 'Images/Lettuce.jpg', name: 'Lettuce'},
-            { src: 'Images/Milkweed.jpg', name: 'Milkweed'},
-            { src: 'Images/Mint.jpg', name: 'Mint'},
-            { src: 'Images/Oregano.jpg', name: 'Oregano'},
-            { src: 'Images/Parsley.jpg', name: 'Parsley'},
-            { src: 'Images/Pea.jpg', name: 'Pea'},
-            { src: 'Images/Rosemary.jpg', name: 'Rosemary'},
-            { src: 'Images/Squash.jpg', name: 'Squash'},
-            { src: 'Images/Strawberry.jpg', name: 'Strawberry'},
-            { src: 'Images/SweetPea.jpg', name: 'Sweet Pea'},
-            { src: 'Images/Thyme.jpg', name: 'Thyme'},
-            { src: 'Images/Tomato.jpg', name: 'Tomato'},
-            { src: 'Images/Zucchini.jpg', name: 'Zucchini'}
+            { src: '/Images/Allium.jpg', name: 'Allium' },
+            { src: '/Images/Basil.jpg', name: 'Basil' },
+            { src: '/Images/BellPepper.jpg', name: 'Bell Pepper' },
+            { src: '/Images/Blackberry.jpg', name: 'Blackberry' },
+            { src: '/Images/BlackEyedSusan.jpg', name: 'Black-Eyed Susan'},
+            { src: '/Images/BleedingHeart.jpg', name: 'Bleeding Heart'},
+            { src: '/Images/Blueberry.jpg', name: 'Blueberry'},
+            { src: '/Images/BlueBonnet.jpg', name: 'Blue Bonnet'},
+            { src: '/Images/Carnation.jpg', name: 'Carnation'},
+            { src: '/Images/Daylily.jpg', name: 'Daylily'},
+            { src: '/Images/Garlic.jpg', name: 'Garlic'},
+            { src: '/Images/Hydrangea.jpg', name: 'Hydrangea'},
+            { src: '/Images/Lavender.jpg', name: 'Lavender'},
+            { src: '/Images/Lemon.jpg', name: 'Lemon'},
+            { src: '/Images/Lettuce.jpg', name: 'Lettuce'},
+            { src: '/Images/Milkweed.jpg', name: 'Milkweed'},
+            { src: '/Images/Mint.jpg', name: 'Mint'},
+            { src: '/Images/Oregano.jpg', name: 'Oregano'},
+            { src: '/Images/Parsley.jpg', name: 'Parsley'},
+            { src: '/Images/Pea.jpg', name: 'Pea'},
+            { src: '/Images/Rosemary.jpg', name: 'Rosemary'},
+            { src: '/Images/Squash.jpg', name: 'Squash'},
+            { src: '/Images/Strawberry.jpg', name: 'Strawberry'},
+            { src: '/Images/SweetPea.jpg', name: 'Sweet Pea'},
+            { src: '/Images/Thyme.jpg', name: 'Thyme'},
+            { src: '/Images/Tomato.jpg', name: 'Tomato'},
+            { src: '/Images/Zucchini.jpg', name: 'Zucchini'}
         ];
 
         // Shuffle function for randomizing image/name order
